fix page overflow scroll stuff

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,9 @@ body {
 	margin: 0;
 	background-color: #FFFFFF;
 	color: #424242;
+
+	word-wrap: break-word;
+	word-break: break-word;
 }
 
 p {
